[tool.poetry]
name = "wallee export back "
version = "0.1.0"
description = "Wallee bacj for files export"
authors = ["MaxKolbysh <maksim.kolbyshev@saint-gobain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.27.0"}
jinja2 = "^3.1.3"
xhtml2pdf = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
